--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@storybook/addon-docs": "^10.1.4",
 		"@tailwindcss/vite": "^4.1.17",
+		"@tanstack/react-query": "^5.90.11",
+		"axios": "^1.13.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
