--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.17",
 		"vaul": "^1.1.2",
-		"zod": "^4.1.13"
+		"zod": "^4.1.13",
+		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
