--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@radix-ui/react-toggle": "^1.1.10",
 		"@radix-ui/react-toggle-group": "^1.1.11",
 		"@radix-ui/react-tooltip": "^1.2.8",
+		"@reduxjs/toolkit": "^2.11.0",
 		"@storybook/addon-docs": "^10.1.4",
 		"@tailwindcss/vite": "^4.1.17",
 		"@tanstack/react-query": "^5.90.11",
