feat(backend): finish backend connection

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,6 @@
-Database__dialect=<your_dialect>
-Database__host=<your_host>
-Database__password=<your_password>
-Database__port=<your_port>
-Database__user=<your_username>
-Database__database=<your_database_name>
+database__dialect=<your_dialect>
+database__host=<your_host>
+database__password=<your_password>
+database__port=<your_port>
+database__user=<your_username>
+database__database=<your_database_name>
