--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -22,7 +22,8 @@
 		"strictBindCallApply": false,
 		"noFallthroughCasesInSwitch": false,
 		"paths": {
-			"@/*": ["src/*"]
+			"@/*": ["src/*"],
+			"@utils/*": ["src/common/utils/*"]
 		},
 		"composite": true
 	},
